--- a/priv/templates/release.eex
+++ b/priv/templates/release.eex
@@ -34,11 +34,23 @@ release :<%= Keyword.get(release, :release_name) %> do
     end) |> Enum.join(",\n") %>
   ]
   plugin Bootloader
-  plugin Nerves
+  if System.get_env("NERVES_SYSTEM") do
+    set dev_mode: false
+    set include_src: false
+    set include_erts: System.get_env("ERL_LIB_DIR")
+    set include_system_libs: System.get_env("ERL_SYSTEM_LIB_DIR")
+    set vm_args: "rel/vm.args"
+  end
 end<% else %>
 release :<%= Keyword.get(release, :release_name) %> do
   set version: current_version(:<%= Keyword.get(release, :release_name)%>)
   plugin Bootloader
-  plugin Nerves
+  if System.get_env("NERVES_SYSTEM") do
+    set dev_mode: false
+    set include_src: false
+    set include_erts: System.get_env("ERL_LIB_DIR")
+    set include_system_libs: System.get_env("ERL_SYSTEM_LIB_DIR")
+    set vm_args: "rel/vm.args"
+  end
 end<% end %>
 <% end %>
